--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h3>📁 Categories</h3>
-    <a href="#">🏠 Home</a>
+    <a href="#home">🏠 Home</a>
     <a href="#action">🎯 Action</a>
     <a href="#comedy">😂 Comedy</a>
     <a href="#drama">😢 Drama</a>
