--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Movie Download Site</title>
+  <title>Movie Zone BD</title>
   <style>
     body {
       font-family: sans-serif;
@@ -175,7 +175,7 @@
 
 <!-- Header Section -->
 <div class="header">
-  <div class="logo">🎬 MovieZone</div>
+  <div class="logo">🎬 Movie Zone BD</div>
   <div class="ad-space">📢 Place Your Advertisement Here</div>
 </div>
 
